--- a/templates/page/new/cart.html
+++ b/templates/page/new/cart.html
@@ -35,7 +35,7 @@
                             {% for cart_item in all_items_in_cart %}
 								<tr>
 									<td class="cart_delete text-center">
-										<a title="Remove this item" class="remove" href="javascript:void(0)" onclick="delete_from_main_cart({{ cart_item.id }});return false;">
+										<a title="Удалить из корзины" class="remove" href="javascript:void(0)" onclick="delete_from_main_cart({{ cart_item.id }});return false;">
 											<i class="fa fa-times"></i>
 										</a>
 									</td>
