add image compressing

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -8,7 +8,11 @@
 		<!--by SKIBORG  -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>ЦВЕТЫ</title>
+		<title>
+            {% block title %}
+                Flowers&Grasses | Магазин Дизайнерских Букетов
+            {% endblock %}
+        </title>
 
 		<meta name="keywords" content="Responsive HTML Template">
 		<meta name="description" content="Scara Responsive HTML Template">
