--- a/templates/customuser/wishlist.html
+++ b/templates/customuser/wishlist.html
@@ -40,9 +40,9 @@
                                     <td class="cart_unit text-right">
 										 {% if item.item.discount > 0 %}
 
-                                     <div class="price" ><span ><span>{{ item.item.discount_value }} &#8381;</span> <span class="old-price">{{ item.item.price }} &#8381;</span></div>
+                                     <div class="price no-border" ><span ><span>{{ item.item.discount_value }} &#8381;</span> <span class="old-price">{{ item.item.price }} &#8381;</span></div>
                                 {% else %}
-                                     <div class="price" ><span >{{ item.item.price }} &#8381;</span></div>
+                                     <div class="price no-border" ><span >{{ item.item.price }} &#8381;</span></div>
                                 {% endif %}
 									</td>
 
