--- a/templates/customuser/order.html
+++ b/templates/customuser/order.html
@@ -19,7 +19,7 @@
 <div style="margin-bottom: 40px" class="container main-container headerOffset">
 
     <div class="row">
-        <div class="col-lg-9 col-md-9 col-sm-7">
+        <div class="col-lg-12 col-md-12 col-sm-12">
 
             <div class="row userInfo">
 
@@ -47,12 +47,12 @@
 
                             <div class="order-box-content">
                                 <div class="table-responsive">
-                                    <table class="order-details-cart">
+                                    <table class="table" >
                                         <tbody>
                                         {% for item in order.itemsinorder_set.all %}
-                                        <tr class="cartProduct">
+                                         <tr class="cartProduct">
                                             <td class="cartProductThumb" style="width:20%">
-                                                <div><a href="{% url 'product' item.item.name_slug %}"> <img alt="img"
+                                                <div><a href="{% url 'product' item.item.name_slug %}"> <img class="img-responsive" alt="img"
                                                         {% for image in item.item.itemimage_set.all %}
                                                             {% if image.is_main %}
                                                                src="{{ image.image.url }}
@@ -62,37 +62,42 @@
                                                 </div>
                                             </td>
                                             <td style="width:40%">
-                                                <div class="miniCartDescription">
+
                                                     <h4><a href="{% url 'product' item.item.name_slug %}"> {{ item.item.name }} </a></h4>
+                                                     {% if item.text %}
+                                                            <p id="header_cart_item_text">Подпись: {{ item.text }}</p>
+                                                            {% else %}
+                                                                <p id="header_cart_item_text">Без подписи</p>
+                                                            {% endif %}
 
-                                                    {% if item.item.discount > 0 %}
 
-                                                        <div class="price" style="padding-bottom: 5px;">
-                                                         <span style="font-size: 20px;">
+
+                                            </td>
+                                        <td>
+
+                                                   {% if item.item.discount > 0 %}
+
+                                                        <div class="price no-border" style="padding-bottom: 5px;">
+                                                         <span>
                                                              <span>{{ item.item.discount_value }} &#8381;</span>
                                                              <span class="old-price">{{ item.item.price }} &#8381;</span>
+                                                             X {{ item.number }} ед.
                                                          </span>
                                                         </div>
                                                     {% else %}
-                                                        <div class="price" style="padding-bottom: 5px;"><span style="font-size: 20px;">{{ item.item.price }} &#8381;</span></div>
+                                                        <div class="price no-border" style="padding-bottom: 5px;"><span>{{ item.item.price }} &#8381;</span> X {{ item.number }} ед.</div>
                                                     {% endif %}
-                                                </div>
-                                            </td>
-                                            <td class="" style="width:10%"><a> X {{ item.number }} ед.</a></td>
+
+
+
+                                        </td>
+
                                             <td class="" style="width:15%"><span> {{ item.total_price }} &#8381;</span></td>
 
                                         </tr>
                                         {% endfor %}
 
-                                        <tr class="cartTotalTr blank">
-                                            <td class="" style="width:20%">
-                                                <div></div>
-                                            </td>
-                                            <td style="width:40%"></td>
-                                            <td class="" style="width:20%"></td>
-                                            <td class="" style="width:15%"><span>  </span></td>
 
-                                        </tr>
 
                                         <tr class="cartTotalTr">
                                             <td class="" style="width:20%">
@@ -118,10 +123,10 @@
                                             <td style="width:40%"></td>
                                             <td class="" style="width:20%">ИТОГО</td>
                                              {% if order.total_price_with_code %}
-                                                  <td class="" style="width:15%"><span class="price"> {{ order.total_price_with_code }} &#8381;</span></td>
+                                                  <td class="" style="width:15%"><span class="price no-border"> {{ order.total_price_with_code }} &#8381;</span></td>
 
                                             {% else %}
-                                                  <td class="" style="width:15%"><span class="price"> {{ order.total_price }} &#8381;</span></td>
+                                                  <td class="" style="width:15%"><span class="price no-border"> {{ order.total_price }} &#8381;</span></td>
 
                                             {% endif %}
 
