--- a/templates/customuser/orders.html
+++ b/templates/customuser/orders.html
@@ -17,7 +17,7 @@
     </div><!-- end breadcrumb -->
 <div style="margin-bottom: 40px" class="container main-container headerOffset">
     <div class="row">
-        <div class="col-lg-9 col-md-9 col-sm-7">
+        <div class="col-lg-12 col-md-12 col-sm-12">
 
 
             <div class="row userInfo">
@@ -26,9 +26,11 @@
 {#                </div>#}
 
                 <div style="clear:both"></div>
+                   <h4 class="block-title-2"><span>Здесь вы можете узнать статус заказов и процесс их обработки</span>
+                    </h4>
 
                 <div class="col-xs-12 col-sm-12">
-                    <table class="footable">
+                    <table style="width: 100%" class="footable">
                         <thead>
                         <tr>
                             <th data-class="expand" data-sort-initial="true"><span
