--- a/templates/page/new/catalog.html
+++ b/templates/page/new/catalog.html
@@ -1,5 +1,8 @@
 {% extends 'basic.html' %}
 {% load static %}
+{% block title %}
+    Каталог - {{ block.super }}
+{% endblock %}
 {% block content %}
     <div id="breadcrumb" class="clearfix">
         <div class="container">
