--- a/templates/page/new/category.html
+++ b/templates/page/new/category.html
@@ -1,5 +1,8 @@
 {% extends 'basic.html' %}
 {% load static %}
+{% block title %}
+    {{ category.name.upper }} - {{ block.super }}
+{% endblock %}
 {% block content %}
 <div id="breadcrumb" class="clearfix">
 				<div class="container">
