--- a/templates/page/order_complete.html
+++ b/templates/page/order_complete.html
@@ -4,47 +4,43 @@
 {% block content %}
 
 
-<div class="container main-container headerOffset">
-   <div class="row">
-        <div class="breadcrumbDiv col-lg-12">
-            <ul class="breadcrumb">
-                <li><a href="/">ГЛАВНАЯ</a></li>
-                <li class="active">ЗАКАЗ #{{ order.id }} ID:{{ order.order_code }}</li>
-            </ul>
+
+    <div id="breadcrumb" class="clearfix">
+        <div class="container">
+            <div class="breadcrumb clearfix">
+                <ul class="ul-breadcrumb">
+                    <li><a href="/" title="Home">Главная</a></li>
+                    <li><span style="color: #fff !important;">ЗАКАЗ #{{ order.id }} ID:{{ order.order_code }}</span></li>
+                </ul>
+
+            </div>
         </div>
-    </div>
-    <!--/.row-->
+    </div><!-- end breadcrumb -->
+    <div style="margin-bottom: 40px" class="container main-container headerOffset globalPaddingBottom">
+        <div class="row">
+            <div class="col-lg-12 ">
+                <div class="row userInfo">
 
+                    <div class="thanxContent text-center">
 
-    <div class="row">
-        <div class="col-lg-12 ">
-            <div class="row userInfo">
+                        <h1>Спасибо за Ваш заказ.</h1>
+                        <h4>Вся информация о заказе и его статусе оправлена Вам на указанный адрес электронной почты.</h4>
+                        <h4>С Вами свяжется наш менеджер для уточнения заказа.</h4>
 
-                <div class="thanxContent text-center">
+                    </div>
 
-                    <h1>Спасибо за Ваш заказ.</h1>
-                    <h4>Вся информация о заказе и его статусе оправлена Вам на указанный адрес электронной почты.</h4>
-                    <h4>С Вами свяжется наш менеджер для уточнения заказа.</h4>
+                    <div class="col-lg-12 ">
+                        <h4>Вы заказали</h4>
 
-                </div>
+                        <div class="table-responsive">
 
-                <div class="col-lg-7 col-center">
-                    <h4></h4>
-
-                    <div class="cartContent table-responsive  w100">
-                        <table style="width:100%" class="cartTable cartTableBorder">
-                            <tbody>
-
-                            <tr class="CartProduct  cartTableHeader">
-                                <td colspan="2"> Вы заказали</td>
-
-
-                                <td style="width:15%"></td>
-                            </tr>
-                               {% for item in order.itemsinorder_set.all %}
-                                     <tr class="CartProduct">
-                                <td class="CartProductThumb">
-                                       <div><a href="{% url 'product' item.item.name_slug %}"> <img style="width: 250px;" alt="img"
+                           <div class="table-responsive">
+                                    <table class="table" >
+                                        <tbody>
+                                        {% for item in order.itemsinorder_set.all %}
+                                        <tr class="cartProduct">
+                                            <td class="cartProductThumb" style="width:20%">
+                                                <div><a href="{% url 'product' item.item.name_slug %}"> <img class="img-responsive" alt="img"
                                                         {% for image in item.item.itemimage_set.all %}
                                                             {% if image.is_main %}
                                                                src="{{ image.image.url }}
@@ -52,55 +48,103 @@
                                                         {% endfor %}">
                                                 </a>
                                                 </div>
-                                </td>
-                                <td>
-                                    <div class="CartDescription">
-                                         <h4><a href="{% url 'product' item.item.name_slug %}"> {{ item.item.name }} </a></h4>
+                                            </td>
+                                            <td style="width:40%">
+
+                                                    <h4><a href="{% url 'product' item.item.name_slug %}"> {{ item.item.name }} </a></h4>
+                                                     {% if item.text %}
+                                                            <p id="header_cart_item_text">Подпись: {{ item.text }}</p>
+                                                            {% else %}
+                                                                <p id="header_cart_item_text">Без подписи</p>
+                                                            {% endif %}
 
 
-                                       {% if item.item.discount > 0 %}
 
-                                                        <div class="price" style="padding-bottom: 5px;">
-                                                         <span style="font-size: 20px;">
+                                            </td>
+                                        <td>
+
+                                                   {% if item.item.discount > 0 %}
+
+                                                        <div class="price no-border" style="padding-bottom: 5px;">
+                                                         <span>
                                                              <span>{{ item.item.discount_value }} &#8381;</span>
                                                              <span class="old-price">{{ item.item.price }} &#8381;</span>
+                                                             X {{ item.number }} ед.
                                                          </span>
                                                         </div>
                                                     {% else %}
-                                                        <div class="price" style="padding-bottom: 5px;"><span style="font-size: 20px;">{{ item.item.price }} &#8381;</span></div>
+                                                        <div class="price no-border" style="padding-bottom: 5px;"><span>{{ item.item.price }} &#8381;</span> X {{ item.number }} ед.</div>
                                                     {% endif %}
-                                    </div>
-                                </td>
 
 
-                                <td class="price">{{ item.total_price }} &#8381;</td>
-                            </tr>
 
+                                        </td>
+
+                                            <td class="" style="width:15%"><span> {{ item.total_price }} &#8381;</span></td>
+
+                                        </tr>
                                         {% endfor %}
 
 
 
+                                        <tr class="cartTotalTr">
+                                            <td class="" style="width:20%">
+                                                <div></div>
+                                            </td>
+                                            <td colspan="2" style="width:40%">Общая сумма</td>
+                                            <td class="" style="width:15%"><span> {{ order.total_price }} &#8381;</span></td>
 
-                            </tbody>
-                        </table>
+                                        </tr>
+                                        <tr class="cartTotalTr">
+                                            <td class="" style="width:20%">
+                                                <div></div>
+                                            </td>
+                                            <td colspan="2" style="width:40%">Скидка по промо-коду</td>
+                                            <td class="" style="width:15%"><span> {% if order.promo_code %}{{ order.promo_code.promo_discount }}{% else %}0{% endif %} %</span></td>
+
+                                        </tr>
+
+                                        <tr class="cartTotalTr">
+                                            <td class="" style="width:20%">
+                                                <div></div>
+                                            </td>
+                                            <td style="width:40%"></td>
+                                            <td class="" style="width:20%">ИТОГО</td>
+                                             {% if order.total_price_with_code %}
+                                                  <td class="" style="width:15%"><span class="price no-border"> {{ order.total_price_with_code }} &#8381;</span></td>
+
+                                            {% else %}
+                                                  <td class="" style="width:15%"><span class="price no-border"> {{ order.total_price }} &#8381;</span></td>
+
+                                            {% endif %}
+
+
+                                        </tr>
+
+
+                                        </tbody>
+                                    </table>
+                                </div>
+
+
+                        </div>
+
                     </div>
-
                 </div>
+                <!--/row end-->
+
             </div>
-            <!--/row end-->
+
+            <!--/rightSidebar-->
 
         </div>
+        <!--/row-->
 
-        <!--/rightSidebar-->
-
+        <div style="clear:both"></div>
     </div>
-    <!--/row-->
+    <!-- /.main-container -->
 
-    <div style="clear:both"></div>
-</div>
-<!-- /.main-container -->
-
-<div class="gap"></div>
+    <div class="gap"></div>
 
 
 
