--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -9,7 +9,11 @@
     width: 20%;
   }
 }
-
+@media (max-width: 768px) and (min-width: 0px){
+    [class~=block-search] {
+        display: none;
+    }
+}
 .btn-outline {
   border: 1px solid black;
   background-color: white;
